app/styles/style.scss
@import "colors.scss";

body {
  background-color: $bg-color-1;
  color: $font-color-1;
  font-family: ITC Officina Sans Std, Helvetica;
  -webkit-font-smoothing: antialiased;
}

// hide CARTO attribution image
img[title=CARTO] {
  display: none !important;
}

// button primary
.primary {
  font-family: ITC Officina Sans Std, Helvetica;
  font-size: 16px;
  border: 1px solid $bg-color-2;
  background-color: $bg-color-2;
  color: $font-color-2;
  padding: 12px 16px;
  text-transform: uppercase;
  cursor: pointer;
}

// button secondary
.secondary {
  display: block;
  box-sizing: border-box;
  height: 40px;
  line-height: 18px;
  padding: 11px 0;
  text-align: center;
  border: 1px solid $bg-color-2;
  border-radius: 2px;
  color: $font-color-3;
  cursor: pointer;
  background-color: $bg-color-1;

  &:hover {
    color: $hover-color-1;
    border-color: $hover-color-1;
  }
}

hr {
  width: 17px;
  margin: 20px 0 40px 0;
  border: 1px solid $accent-color-6;
  height: 0;
}

b {
  font-weight: bold;
}

.clickable {
  cursor: pointer;
}

div.markup {
  a {
    color: $font-color-3;
  }

  p, ul {
    margin-bottom: 1em;
  }

  ul {
    list-style-type: disc;
    padding-left: 1em;
  }
}

